; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-queue-foreach-delete.c_helper_timer_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-queue-foreach-delete.c_helper_timer_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i64, i64, i32 }

@watched_dir = common dso_local global i32 0, align 4
@UV_FS_UTIME = common dso_local global i64 0, align 8
@helper_timer_cb_calls = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @helper_timer_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @helper_timer_cb(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @watched_dir, align 4
  %9 = call i32 @uv_fs_utime(i32 %7, %struct.TYPE_7__* %4, i32 %8, i32 0, i32 0, i32* null)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp eq i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @ASSERT(i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @UV_FS_UTIME, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @ASSERT(i32 %23)
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = load i32, i32* @watched_dir, align 4
  %28 = call i64 @strcmp(i32 %26, i32 %27)
  %29 = icmp eq i64 %28, 0
  %30 = zext i1 %29 to i32
  %31 = call i32 @ASSERT(i32 %30)
  %32 = call i32 @uv_fs_req_cleanup(%struct.TYPE_7__* %4)
  %33 = load i32, i32* @helper_timer_cb_calls, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* @helper_timer_cb_calls, align 4
  ret void
}

declare dso_local i32 @uv_fs_utime(i32, %struct.TYPE_7__*, i32, i32, i32, i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @strcmp(i32, i32) #1

declare dso_local i32 @uv_fs_req_cleanup(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
